[package]

name = "communicate_capnp"
version = "0.0.0"
authors = []
build = "./build.rs"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false

[lib]
name = "communicate_capnp"
path = "./lib.rs"

[build-dependencies.capnpc]
git = "https://github.com/dwrensha/capnpc-rust"

[dependencies]
capnp = "*"
